--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2005-06-12  Matthias Clasen  <mclasen@redhat.com>
 
+	* gdk/gdkcairo.c: Small doc additions.
+
 	* gtk/gtktreeview.c (gtk_tree_view_maybe_begin_dragging_row): 
 	Check start_button_mask before starting a drag.  (#149058, 
 	Andreas Volz)
