--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-12  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* th.po: Updated Thai translation.
+
 2005-06-11  Marcel Telka  <marcel@telka.sk>
 
 	* sk.po: Updated Slovak translation.
