Updated Norwegian translation. Updated Norwegian translation.
2005-06-12  Terance Sola  <terance@lyse.net>

	* nb.po: Updated Norwegian translation.
	* no.po: Updated Norwegian translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-06-12  Terance Sola  <terance@lyse.net>
+
+	* nb.po: Updated Norwegian translation.
+	* no.po: Updated Norwegian translation.
+
 2005-06-12  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* th.po: Updated Thai translation.
