--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-12  Martin Willemoes Hansen  <mwh@sysrq.dk>
+
+	* da.po: Updated Danish translation.
+
 2005-06-12  Terance Sola  <terance@lyse.net>
 
 	* nb.po: Updated Norwegian translation.
