--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,8 @@
+2005-06-13  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/tmpl/gtkfontsel.sgml: Some more details (#307384, Billy
+	Biggs)
+
 2005-06-11  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtk-sections.txt: Add gtk_icon_view_get_visible_range
