Add new functions.
2005-06-13  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk-sections.txt: Add new functions.

--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,5 +1,7 @@
 2005-06-13  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtk-sections.txt: Add new functions.
+
 	* gtk/tmpl/gtkfontsel.sgml: Some more details (#307384, Billy
 	Biggs)
 
