--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,8 @@
+2005-06-13  Terance Sola  <terance@yse.net>
+
+	* nb.po: Updated Norwegian Bokmål translation.
+	* no.po: Same.
+
 2005-06-12  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
