--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-06-13  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* th.po: Don't translate placeholders, to be consistent with other
+	packages.
+
 2005-06-12  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
