--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2005-06-13  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkaccellabel.c (_gtk_accel_label_class_get_accelerator_label): 
+	Try harder not to modify readonly strings. (#307541, Torsten Schoenfeld)
+
 	* gtk/gtkfilechooserbutton.c (model_update_current_folder): 
 	Free the data of the row before overwriting it.  (#307490,
 	Kjartan Maraas)
