--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-14  Gabor Kelemen  <kelemeng@gnome.hu>
+
+	* hu.po: Hungarian translation updated.
+
 2005-06-12  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
