--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-15  Hendrik Richter  <hendi@gnome-de.org>
+
+	* de.po: Updated German translation.
+
 2005-06-15  Funda Wang  <fundawang@linux.net.cn>
 
 	* zh_CN.po: Updated Simplified Chinese translation.
