--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-06-15  Matthias Clasen  <mclasen@redhat.com>
 
+	* gdk/x11/gdkwindow-x11.c: Remove a lot of pointless
+	g_return_if_fail() non-NULL checks.
+
+2005-06-15  Matthias Clasen  <mclasen@redhat.com>
+
 	* gdk/abicheck.sh: Use uniq to filter out duplicates.
 	* gdk/gdk.symbols: Fix a define.
 
