--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-15  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Updated Swedish translation.
+
 2005-06-15  Hendrik Richter  <hendi@gnome-de.org>
 
 	* de.po: Updated German translation.
