--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2005-06-15  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkwindow.c (gtk_window_parse_geometry): Fox doc
+	formatting, pointed out by Kjartan Maraas.
+
 	* gtk/gtksettings.c: Add two new settings, 
 	gtk-cursor-theme-name and gtk-cursor-theme-size to
 	control the cursor theme.
